// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Om deg og avdød Snapshot med sivilstatus samboer 1`] = `
<div>
  <div
    class="sc-dItHI fGZLUG"
  >
    <h1
      class="center navds-heading navds-heading--medium"
    >
      omDegOgAvdoed.tittel
    </h1>
  </div>
  <form>
    <fieldset
      class="sc-bdnyFh dkDmBp"
    >
      <label
        class="navds-label"
      >
        omDegOgAvdoed.avdoed.hvem
      </label>
      <div
        class="navds-hgrid"
        style="--__ac-hgrid-align: start; --__ac-hgrid-gap-xs: var(--a-spacing-4); --__ac-hgrid-columns-xs: repeat(1, minmax(0, 1fr)); --__ac-hgrid-columns-sm: repeat(2, minmax(0, 1fr));"
      >
        <div>
          <div
            class="navds-form-field navds-form-field--medium"
          >
            <label
              class="navds-form-field__label navds-label"
              for="avdoed.fornavn"
            >
              omDegOgAvdoed.avdoed.fornavn
            </label>
            <input
              class="navds-text-field__input navds-body-short navds-body-short--medium"
              id="avdoed.fornavn"
              type="text"
              value=""
            />
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-form-field__error"
              id="textField-error-rd"
            />
          </div>
        </div>
        <div>
          <div
            class="navds-form-field navds-form-field--medium"
          >
            <label
              class="navds-form-field__label navds-label"
              for="avdoed.etternavn"
            >
              omDegOgAvdoed.avdoed.etternavn
            </label>
            <input
              class="navds-text-field__input navds-body-short navds-body-short--medium"
              id="avdoed.etternavn"
              type="text"
              value=""
            />
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-form-field__error"
              id="textField-error-re"
            />
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="sc-bdnyFh dkDmBp"
    >
      <section
        class="sc-crzpnZ gBHkfx"
      >
        <div
          class="datepicker"
        >
          <div>
            <div
              class="ds-datepicker"
            >
              <div
                class="navds-form-field navds-form-field--medium"
              >
                <label
                  class="navds-form-field__label navds-label"
                  for="avdoed.datoForDoedsfallet"
                >
                  omDegOgAvdoed.avdoed.datoForDoedsfallet
                </label>
                <div
                  class="navds-form-field__description navds-body-short navds-body-short--small"
                  id="textField-description-rf"
                >
                  felles.oppgiDato felles.datoformat
                </div>
                <div
                  style="position: relative;"
                >
                  <input
                    aria-describedby="textField-description-rf"
                    autocomplete="off"
                    autocorrect="off"
                    class="navds-text-field__input navds-body-short navds-body-medium"
                    id="avdoed.datoForDoedsfallet"
                    inputmode="text"
                    maxlength="10"
                    name="avdoed.datoForDoedsfallet"
                    type="text"
                    value=""
                  />
                  <button
                    aria-expanded="false"
                    class="ds-datepicker__calendarButton ds-datepicker__calendarButton--medium"
                    type="button"
                  >
                    <span
                      class="sr-only"
                    >
                      Kalender
                    </span>
                    <span
                      aria-hidden="true"
                      class="ds-datepicker__calendarButton__icon"
                    >
                      <svg
                        focusable="false"
                        height="16"
                        role="presentation"
                        style="pointer-events: none;"
                        viewBox="0 0 18 18"
                        width="16"
                      >
                        <title>
                          Kalenderikon
                        </title>
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          stroke="#0067C5"
                        >
                          <path
                            d="M4 2.667H1.333v14h15.334v-14H14"
                          />
                          <path
                            d="M4 1.333h2V4H4zm8 0h2V4h-2zM6 2h6M1.333 6h15.334"
                          />
                        </g>
                      </svg>
                    </span>
                  </button>
                </div>
                <div
                  aria-live="polite"
                  aria-relevant="additions removals"
                  class="navds-form-field__error"
                  id="textField-error-rf"
                />
              </div>
            </div>
          </div>
        </div>
      </section>
    </fieldset>
    <fieldset
      class="sc-bdnyFh dkDmBp"
    >
      <div
        id="forholdTilAvdoede.relasjon"
      >
        <fieldset
          class="navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
        >
          <legend
            class="navds-fieldset__legend navds-label"
          >
            omDegOgAvdoed.forholdTilAvdoede.relasjon
          </legend>
          <div
            class="navds-radio-buttons"
          >
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                class="navds-radio__input"
                id="radio-ri"
                name="forholdTilAvdoede.relasjon"
                type="radio"
                value="avdoede.relasjon.gift"
              />
              <label
                class="navds-radio__label"
                for="radio-ri"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short navds-body-short--medium"
                  >
                    avdoede.relasjon.gift
                  </span>
                </span>
              </label>
            </div>
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                class="navds-radio__input"
                id="radio-rj"
                name="forholdTilAvdoede.relasjon"
                type="radio"
                value="avdoede.relasjon.separert"
              />
              <label
                class="navds-radio__label"
                for="radio-rj"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short navds-body-short--medium"
                  >
                    avdoede.relasjon.separert
                  </span>
                </span>
              </label>
            </div>
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                class="navds-radio__input"
                id="radio-rk"
                name="forholdTilAvdoede.relasjon"
                type="radio"
                value="avdoede.relasjon.samboer"
              />
              <label
                class="navds-radio__label"
                for="radio-rk"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short navds-body-short--medium"
                  >
                    avdoede.relasjon.samboer
                  </span>
                </span>
              </label>
            </div>
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                class="navds-radio__input"
                id="radio-rl"
                name="forholdTilAvdoede.relasjon"
                type="radio"
                value="avdoede.relasjon.skilt"
              />
              <label
                class="navds-radio__label"
                for="radio-rl"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short navds-body-short--medium"
                  >
                    avdoede.relasjon.skilt
                  </span>
                </span>
              </label>
            </div>
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                class="navds-radio__input"
                id="radio-rm"
                name="forholdTilAvdoede.relasjon"
                type="radio"
                value="avdoede.relasjon.tidligereSamboer"
              />
              <label
                class="navds-radio__label"
                for="radio-rm"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short navds-body-short--medium"
                  >
                    avdoede.relasjon.tidligereSamboer
                  </span>
                </span>
              </label>
            </div>
          </div>
          <div
            aria-live="polite"
            aria-relevant="additions removals"
            class="navds-fieldset__error"
            id="fieldset-error-rh"
          />
        </fieldset>
      </div>
      <div
        class="sc-dItHI fGZLUG"
      >
        <div
          id="forholdTilAvdoede.fellesBarn"
        >
          <fieldset
            class="navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
          >
            <legend
              class="navds-fieldset__legend navds-label"
            >
              omDegOgAvdoed.forholdTilAvdoede.fellesBarn
            </legend>
            <div
              class="navds-radio-buttons"
            >
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  class="navds-radio__input"
                  id="radio-rs"
                  name="forholdTilAvdoede.fellesBarn"
                  type="radio"
                  value="radiobuttons.ja"
                />
                <label
                  class="navds-radio__label"
                  for="radio-rs"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short navds-body-short--medium"
                    >
                      radiobuttons.ja
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  class="navds-radio__input"
                  id="radio-rt"
                  name="forholdTilAvdoede.fellesBarn"
                  type="radio"
                  value="radiobuttons.nei"
                />
                <label
                  class="navds-radio__label"
                  for="radio-rt"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short navds-body-short--medium"
                    >
                      radiobuttons.nei
                    </span>
                  </span>
                </label>
              </div>
            </div>
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-fieldset__error"
              id="fieldset-error-rr"
            />
          </fieldset>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="sc-bdnyFh dkDmBp"
    >
      <div
        class="sc-gtsqUy fppBuE undefined"
      >
        <button
          class="navds-button navds-button--secondary navds-button--medium"
          type="button"
        >
          <span
            class="navds-label"
          >
            knapp.tilbake
          </span>
        </button>
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            class="navds-label"
          >
            knapp.neste
          </span>
        </button>
      </div>
    </fieldset>
    <div
      class="sc-gtsqUy sc-dlniIP fppBuE iyxXTu"
    >
      <button
        class="navds-button navds-button--tertiary navds-button--medium"
        id="avbryt-btn"
        type="button"
      >
        <span
          class="navds-label"
        >
          knapp.avbryt
        </span>
      </button>
    </div>
    <dialog
      class="navds-modal navds-modal--polyfilled navds-modal--autowidth"
      role="dialog"
    >
      <div
        class="navds-modal__header"
      >
        <button
          class="navds-modal__button navds-button navds-button--tertiary-neutral navds-button--small navds-button--icon-only"
          type="button"
        >
          <span
            class="navds-button__icon"
          >
            <svg
              aria-labelledby="title-rp"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="title-rp"
              >
                Lukk modalvindu
              </title>
              <path
                clip-rule="evenodd"
                d="M6.53 5.47a.75.75 0 0 0-1.06 1.06L10.94 12l-5.47 5.47a.75.75 0 1 0 1.06 1.06L12 13.06l5.47 5.47a.75.75 0 1 0 1.06-1.06L13.06 12l5.47-5.47a.75.75 0 0 0-1.06-1.06L12 10.94 6.53 5.47Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
        <h1
          class="navds-heading navds-heading--medium"
        >
          avbrytModal.spoersmaal
        </h1>
      </div>
      <div
        class="navds-modal__body"
      >
        <p
          class="mute avbryt-text navds-body-short navds-body-short--medium"
        >
          avbrytModal.informasjon
        </p>
      </div>
      <div
        class="navds-modal__footer"
      >
        <div
          class="sc-jrsKJM dwwRPt"
        >
          <button
            class="navds-button navds-button--secondary navds-button--medium"
            id="avbryt-nei-btn"
            style="margin: 10px;"
            type="button"
          >
            <span
              class="navds-label"
            >
              avbrytModal.svarNei
            </span>
          </button>
          <button
            class="navds-button navds-button--primary navds-button--medium"
            id="avbryt-ja-btn"
            style="margin: 10px;"
            type="button"
          >
            <span
              class="navds-label"
            >
              avbrytModal.svarJa
            </span>
          </button>
        </div>
        <div
          class="sc-jrsKJM dwwRPt"
        >
          <button
            class="navds-button navds-button--tertiary navds-button--medium"
            id="slett-soeknad"
            style="color: rgb(198, 93, 78);"
            type="button"
          >
            <span
              class="navds-label"
            >
              avbrytModal.svarSlett
            </span>
          </button>
        </div>
      </div>
    </dialog>
  </form>
</div>
`;

exports[`Om deg og avdød Snapshot uten samboerskjema 1`] = `
<div>
  <div
    class="sc-dItHI fGZLUG"
  >
    <h1
      class="center navds-heading navds-heading--medium"
    >
      omDegOgAvdoed.tittel
    </h1>
  </div>
  <form>
    <fieldset
      class="sc-bdnyFh dkDmBp"
    >
      <label
        class="navds-label"
      >
        omDegOgAvdoed.avdoed.hvem
      </label>
      <div
        class="navds-hgrid"
        style="--__ac-hgrid-align: start; --__ac-hgrid-gap-xs: var(--a-spacing-4); --__ac-hgrid-columns-xs: repeat(1, minmax(0, 1fr)); --__ac-hgrid-columns-sm: repeat(2, minmax(0, 1fr));"
      >
        <div>
          <div
            class="navds-form-field navds-form-field--medium"
          >
            <label
              class="navds-form-field__label navds-label"
              for="avdoed.fornavn"
            >
              omDegOgAvdoed.avdoed.fornavn
            </label>
            <input
              class="navds-text-field__input navds-body-short navds-body-short--medium"
              id="avdoed.fornavn"
              type="text"
              value=""
            />
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-form-field__error"
              id="textField-error-r0"
            />
          </div>
        </div>
        <div>
          <div
            class="navds-form-field navds-form-field--medium"
          >
            <label
              class="navds-form-field__label navds-label"
              for="avdoed.etternavn"
            >
              omDegOgAvdoed.avdoed.etternavn
            </label>
            <input
              class="navds-text-field__input navds-body-short navds-body-short--medium"
              id="avdoed.etternavn"
              type="text"
              value=""
            />
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-form-field__error"
              id="textField-error-r1"
            />
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="sc-bdnyFh dkDmBp"
    >
      <section
        class="sc-crzpnZ gBHkfx"
      >
        <div
          class="datepicker"
        >
          <div>
            <div
              class="ds-datepicker"
            >
              <div
                class="navds-form-field navds-form-field--medium"
              >
                <label
                  class="navds-form-field__label navds-label"
                  for="avdoed.datoForDoedsfallet"
                >
                  omDegOgAvdoed.avdoed.datoForDoedsfallet
                </label>
                <div
                  class="navds-form-field__description navds-body-short navds-body-short--small"
                  id="textField-description-r2"
                >
                  felles.oppgiDato felles.datoformat
                </div>
                <div
                  style="position: relative;"
                >
                  <input
                    aria-describedby="textField-description-r2"
                    autocomplete="off"
                    autocorrect="off"
                    class="navds-text-field__input navds-body-short navds-body-medium"
                    id="avdoed.datoForDoedsfallet"
                    inputmode="text"
                    maxlength="10"
                    name="avdoed.datoForDoedsfallet"
                    type="text"
                    value=""
                  />
                  <button
                    aria-expanded="false"
                    class="ds-datepicker__calendarButton ds-datepicker__calendarButton--medium"
                    type="button"
                  >
                    <span
                      class="sr-only"
                    >
                      Kalender
                    </span>
                    <span
                      aria-hidden="true"
                      class="ds-datepicker__calendarButton__icon"
                    >
                      <svg
                        focusable="false"
                        height="16"
                        role="presentation"
                        style="pointer-events: none;"
                        viewBox="0 0 18 18"
                        width="16"
                      >
                        <title>
                          Kalenderikon
                        </title>
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          stroke="#0067C5"
                        >
                          <path
                            d="M4 2.667H1.333v14h15.334v-14H14"
                          />
                          <path
                            d="M4 1.333h2V4H4zm8 0h2V4h-2zM6 2h6M1.333 6h15.334"
                          />
                        </g>
                      </svg>
                    </span>
                  </button>
                </div>
                <div
                  aria-live="polite"
                  aria-relevant="additions removals"
                  class="navds-form-field__error"
                  id="textField-error-r2"
                />
              </div>
            </div>
          </div>
        </div>
      </section>
    </fieldset>
    <fieldset
      class="sc-bdnyFh dkDmBp"
    >
      <div
        id="forholdTilAvdoede.relasjon"
      >
        <fieldset
          class="navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
        >
          <legend
            class="navds-fieldset__legend navds-label"
          >
            omDegOgAvdoed.forholdTilAvdoede.relasjon
          </legend>
          <div
            class="navds-radio-buttons"
          >
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                class="navds-radio__input"
                id="radio-r5"
                name="forholdTilAvdoede.relasjon"
                type="radio"
                value="avdoede.relasjon.gift"
              />
              <label
                class="navds-radio__label"
                for="radio-r5"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short navds-body-short--medium"
                  >
                    avdoede.relasjon.gift
                  </span>
                </span>
              </label>
            </div>
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                class="navds-radio__input"
                id="radio-r6"
                name="forholdTilAvdoede.relasjon"
                type="radio"
                value="avdoede.relasjon.separert"
              />
              <label
                class="navds-radio__label"
                for="radio-r6"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short navds-body-short--medium"
                  >
                    avdoede.relasjon.separert
                  </span>
                </span>
              </label>
            </div>
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                class="navds-radio__input"
                id="radio-r7"
                name="forholdTilAvdoede.relasjon"
                type="radio"
                value="avdoede.relasjon.samboer"
              />
              <label
                class="navds-radio__label"
                for="radio-r7"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short navds-body-short--medium"
                  >
                    avdoede.relasjon.samboer
                  </span>
                </span>
              </label>
            </div>
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                class="navds-radio__input"
                id="radio-r8"
                name="forholdTilAvdoede.relasjon"
                type="radio"
                value="avdoede.relasjon.skilt"
              />
              <label
                class="navds-radio__label"
                for="radio-r8"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short navds-body-short--medium"
                  >
                    avdoede.relasjon.skilt
                  </span>
                </span>
              </label>
            </div>
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                class="navds-radio__input"
                id="radio-r9"
                name="forholdTilAvdoede.relasjon"
                type="radio"
                value="avdoede.relasjon.tidligereSamboer"
              />
              <label
                class="navds-radio__label"
                for="radio-r9"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short navds-body-short--medium"
                  >
                    avdoede.relasjon.tidligereSamboer
                  </span>
                </span>
              </label>
            </div>
          </div>
          <div
            aria-live="polite"
            aria-relevant="additions removals"
            class="navds-fieldset__error"
            id="fieldset-error-r4"
          />
        </fieldset>
      </div>
    </fieldset>
    <fieldset
      class="sc-bdnyFh dkDmBp"
    >
      <div
        class="sc-gtsqUy fppBuE undefined"
      >
        <button
          class="navds-button navds-button--secondary navds-button--medium"
          type="button"
        >
          <span
            class="navds-label"
          >
            knapp.tilbake
          </span>
        </button>
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            class="navds-label"
          >
            knapp.neste
          </span>
        </button>
      </div>
    </fieldset>
    <div
      class="sc-gtsqUy sc-dlniIP fppBuE iyxXTu"
    >
      <button
        class="navds-button navds-button--tertiary navds-button--medium"
        id="avbryt-btn"
        type="button"
      >
        <span
          class="navds-label"
        >
          knapp.avbryt
        </span>
      </button>
    </div>
    <dialog
      class="navds-modal navds-modal--polyfilled navds-modal--autowidth"
      role="dialog"
    >
      <div
        class="navds-modal__header"
      >
        <button
          class="navds-modal__button navds-button navds-button--tertiary-neutral navds-button--small navds-button--icon-only"
          type="button"
        >
          <span
            class="navds-button__icon"
          >
            <svg
              aria-labelledby="title-rc"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="title-rc"
              >
                Lukk modalvindu
              </title>
              <path
                clip-rule="evenodd"
                d="M6.53 5.47a.75.75 0 0 0-1.06 1.06L10.94 12l-5.47 5.47a.75.75 0 1 0 1.06 1.06L12 13.06l5.47 5.47a.75.75 0 1 0 1.06-1.06L13.06 12l5.47-5.47a.75.75 0 0 0-1.06-1.06L12 10.94 6.53 5.47Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
        <h1
          class="navds-heading navds-heading--medium"
        >
          avbrytModal.spoersmaal
        </h1>
      </div>
      <div
        class="navds-modal__body"
      >
        <p
          class="mute avbryt-text navds-body-short navds-body-short--medium"
        >
          avbrytModal.informasjon
        </p>
      </div>
      <div
        class="navds-modal__footer"
      >
        <div
          class="sc-jrsKJM dwwRPt"
        >
          <button
            class="navds-button navds-button--secondary navds-button--medium"
            id="avbryt-nei-btn"
            style="margin: 10px;"
            type="button"
          >
            <span
              class="navds-label"
            >
              avbrytModal.svarNei
            </span>
          </button>
          <button
            class="navds-button navds-button--primary navds-button--medium"
            id="avbryt-ja-btn"
            style="margin: 10px;"
            type="button"
          >
            <span
              class="navds-label"
            >
              avbrytModal.svarJa
            </span>
          </button>
        </div>
        <div
          class="sc-jrsKJM dwwRPt"
        >
          <button
            class="navds-button navds-button--tertiary navds-button--medium"
            id="slett-soeknad"
            style="color: rgb(198, 93, 78);"
            type="button"
          >
            <span
              class="navds-label"
            >
              avbrytModal.svarSlett
            </span>
          </button>
        </div>
      </div>
    </dialog>
  </form>
</div>
`;
